tests/ui/args-invalid-ignore_case.stderr
error[E0080]: evaluation panicked: `arg(ignore_case)` only supports `ValueEnum` that contains no UPPERCASE variants
 --> tests/ui/args-invalid-ignore_case.rs:8:12
  |
8 |     upper: UpperCase,
  |            ^^^^^^^^^ evaluation of `_::<impl palc::__private::Args for Cli1>::__parse::_` failed here
